[package]
name = "axumtel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
opentelemetry = { version = "0.23.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.16.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
