[package]
name = "luaserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
